--- a/a10.md
+++ b/a10.md
@@ -26,7 +26,7 @@ The three remaining group members had worked in all the artifacts.
 The individual contribution of each member to the LBAW project, and considering all artefacts, is expressed in the following list:
 
 * Cláudia Raquel Mamede - 
-* Miguel Maio Romariz - 
+* Miguel Maio Romariz - B
 * Raul Viana - A
 
 
